history/v1.8.2/introduction/projectexample.md
# 开源集成案例


| 作者         | 项目名称                                                                                                             | 描述                                                                                                           |
|------------|------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|
| 晓华         | [hh-vue](https://gitee.com/min290/hh-vue)                                                                        | 官方演示项目，基于ruoyi-vue集成，springboot2+vue2                                                                        |
| 疯狂的狮子Li    | [RuoYi-Vue-Plus](https://gitee.com/dromara/RuoYi-Vue-Plus)                                                       | 多租户后台管理系统 重写RuoYi-Vue所有功能 集成 Sa-Token、Mybatis-Plus、Flowable、SpringDoc、Hutool、OSS 定期同步                        |
| 玲娜贝er      | [ruoyi-plus-vben5](https://gitee.com/dapppp/ruoyi-plus-vben5)                                                    | 基于vben最新版本v5 & ant-design-vue 的 RuoYi-Vue-Plus 前端项目                                                          |
| lframework | [星云ERP](https://gitee.com/lframework/xingyun)                                                                    | 为中小企业提供开源免费、优质体验的进销存ERP系统，解决开店、管理、数据统计难等问题，实现业务线上化、透明化、简易化等目标。                                               |
| 马铃薯头&Elio  | [ruoyi-plus-soybean](https://gitee.com/xlsea/ruoyi-plus-soybean)                                                 | 为中小企业提供开源免费、优质体验的进销存ERP系统，解决开店、管理、数据统计难等问题，实现业务线上化、透明化、简易化等目标。                                               |
| battcn     | [WEMIRR-PLATFORM](https://gitee.com/battcn/wemirr-platform)                                                      | 一款纯为爱发电的开源多租户、SAAS、系统，SpringCloud2024、Mysql、Mybatis-Plus、Spring Cloud Alibaba2023                            |
| 晓华/Zhen    | [ruoyi-vue3](https://gitee.com/min290/RuoYi-Vue3.git )                                                           | 基于ruoyi-vue3集成前端                                                                                             |
| 梁小梁/Zhen   | [Ruoyi-Cloud](https://gitee.com/liangliyun/RuoYi-Cloud)/[RuoYi-Vue3](https://gitee.com/liangliyun/RuoYi-Vue3-UI) | 基于Ruoyi-Cloud集成的跑批系统,spring-cloud(nacos)+vue3                                                                |
| lovefawn   | [SmartFlow](https://gitee.com/iyhk_0/smart-flow)                                                                 | SmartFlow 基于SmartAdmin、Warm-Flow和Ruoyi-Vue-Plus开源项目，实现了流程设计、流程实例、流程审批、流程监控等功能。                               |
| seven      | [seaflow](https://gitee.com/qq75547276/seaflow)                                                                  | seaflow 是一款 开源仿钉钉工作流 平台， 前端使用 vue3+element plus ， 实现 流程设计和审批功能， 后端基于国产工作流Dromara warm-flow 实现流程控制， 大大缩短了学习成本 |
| quick      | [quick-boot](https://github.com/csx-bill/quick-boot)                                                             | 基于 Spring Cloud 2022 、Spring Boot 3、React、AMIS 和 APIJSON 的低代码系统的设计和实现。该系统可以帮助企业快速开发和部署高质量的 Web 应用程序          |

